# curv3d

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  README.rst  SETUP
docs/: Doxyfile  requirements.txt
docs/source/: classes.rst  conf.py  index.rst  theory.rst
docs/source/_static/js/: mathjax-config.js
scripts/: points.txt  surface_plotter.py
src/: Object.cpp  Object.hpp  Primitive.cpp  Primitive.hpp  Scene.cpp  Scene.hpp  Utils.hpp  bezier.cpp  bezier.h  main.cpp  rasterize.cpp  rasterize.h  util.cpp  util.h
